--- a/src/App.css
+++ b/src/App.css
@@ -19,16 +19,16 @@ label {
 }
 
 .foro-date {
-  background: rgb(2, 0, 36);
-  background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 0%, rgba(1, 134, 250, 1) 51%);
   color: white;
   display: flex;
   align-items: center;
   width: fit-content;
   font-size: 1.5em;
-  margin-left: auto;
+  color: #FEBE33;  
 }
-
+.border-end{
+  border-right: solid 2px #FEBE33 !important;
+}
 .foro-date div {
   padding: 20px 25px;
 }
@@ -83,7 +83,7 @@ h1 {
 }
 
 footer {
-  background-color: black;
+  background-color: #090F4D;
   color: white;
   padding: 20px;
 }
