--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+.bg-nearshoring{
+  position: absolute;
+  width: 100%;  
+  height: 100vh;
+  object-fit: cover;
+}
+.nearshoring-text{
+  position: relative;
+  z-index: 2;
+  text-shadow: 4px 4px 4px black;
+}
 .foro-nearshoring {
   background-image: url('/bgForonearshoring.webp');
   background-size: cover;
