--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+.enfoques{
+  background: black;
+  padding: 10px;
+  border-radius: 20px;
+}
+.menu a{
+  font-weight: bold;
+  font-size: 1.5em;
+  color: white;
+}
 .bg-nearshoring{
   position: absolute;
   width: 100%;  
