--- a/src/components/Program.css
+++ b/src/components/Program.css
@@ -132,9 +132,15 @@
       font-size: 45px;
     }
 
-    .img-responsive{
-      width: 100%;
-      height: 100%;
+    .d-inline-flex {
+      flex-direction: row; /* Cambiar la dirección de los elementos a fila */
+      flex-wrap: wrap; /* Permitir que los elementos se envuelvan a la siguiente fila */
     }
+  
+    .program-date-avatar {
+      width: calc(50% - 50px); /* El 50% del ancho de la columna, restando el espacio entre las imágenes */
+      margin: 5px; /* Espacio entre las imágenes */
+    }
+  
   }
   
