modificacion en diseno de programa de conferencias

--- a/src/components/Program.css
+++ b/src/components/Program.css
@@ -46,10 +46,11 @@
   
   .img-logo{width: 200px;}
   
-  .program-date-avatar:hover {
+  
+  /* .program-date-avatar:hover {
     cursor: pointer;
     box-shadow: 0 0 0 1px #000, 0 0 0 2px #54c8fa, 0 0 22px 0 #54c8fa;
-  }
+  } */
   
   .program-dates li {
     padding: 0;
